# microML

./: .gitignore  Main.hs  README.md  installMicroML  microML.cabal  stack.yaml
docs/: bibliography.bib  codeSamples.tex  diary.tex  glossary.tex  initialreport.latex  libs.tex  markdown.tex  mmlcode.tex  progressreport.latex  repl.tex  replCode.tex  report.latex  report.tex  req.tex  samples.tex  syntax.tex  sysf.tex  texBib  user.tex
src/: Eval.hs  Lexer.hs  Main.hs  Parser.hs  Repl.hs  Syntax.hs  Tree.hs
src/Compiler/: CHelper.hs  CallGraph.hs  CodeGen.hs  Failure.hs  MicroBitHeader.hs  PrettyCPP.hs  State.hs  Syntax.hs
src/Jit/: Codegen.hs  Emit.hs
src/Language/: Env.hs  Eval.hs  Infer.hs  Lexer.hs  ListPrimitives.hs  Main.hs  Parser.hs  Pretty.hs  Repl.hs  Syntax.hs  Type.hs
src/Language/Typing/: Env.hs  Errors.hs  Infer.hs  Substitutable.hs  Type.hs  TypeError.hs
src/Libs/: church.ml  church.mml  combinators.mml  glossary.mml  maths.ml  maths.mml  standard.ml  standard.mml  string.ml  string.mml  test.ml  test.mml
src/MicroML/: Config.hs  Lexer.hs  ListPrimitives.hs  MathsPrimitives  MathsPrimitives.hs  Parser.hs  Syntax.hs
src/MicroML/Typing/: Env.hs  Infer.hs  Substitutable.hs  Type.hs  TypeError.hs
src/Repl/: Eval.hs  Help.hs  HelpDicts.hs  HelpEnv.hs  ParseTree.hs  Pretty.hs  Repl.hs  standard.md
src/Utils/: microArt
test/: CallGraphSpec.hs  EvalSpec.hs  ListPrimitivesSpec.hs  Main.hs  MathsPrimitives.hs  TestMain.hs
test/compiler/: addition.mml  badTypeSimple.mml  duplicateFail.mml  empty.mml  funcCall.mml  letDecl.mml  linkedUnreachable.mml  multiFunc.mml  sub.mml
tests/: C-Test.hs  LexerTest.hs  Main.hs  addition.mml  arithmetic.ml  badType.mml  compile1.ml  declarations.ml  declarations.mml  duplicateFail.ml  helloWorld.ml  helloWorld.mml  ifStatement.mml  imports.ml  letDecl.mml  main.mml  map.ml  multiLet.mml  positive.ml  positive.mml  reachable.ml  reachable.mml  receiver.mml  simple  unreachable.mml
utils/: compilerTests.sh  microMLrc  mml.vim
utils/microML.vim/autoload/: funcs.vim  microMLcomplete.vim
utils/microML.vim/ftdetect/: microML.vim
utils/microML.vim/ftplugin/: microML.vim
utils/microML.vim/syntax/: microML.vim
utils/vim-mmlFold/plugin/: mmlFold.vim
