Name:           microML
Version:        0.0.1
Synopsis:       Functional Programming for BBC micro:bit
Description:    A simple functional programming language which compiles to C++
Author:         David Kelly
Maintainer:     dkellino@gmail.com

Category:       Compiler

Build-type:     Simple
Cabal-version:  >=1.6

test-suite microMLTest
  hs-source-dirs:    tests, src/Language
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -threaded
  build-depends:     base,
                     hspec,
                     hspec-expectations,
                     hspec-megaparsec

executable microML
  hs-source-dirs:    src
  Main-is:           Main.hs
  
  -- Packages needed in order to build this package.
  Build-depends:     base >= 3,
                     parsec,
                     repline >= 0.1.5.0,
                     process,
                     random,
                     directory,
                     mtl,
                     text,
                     pretty,
                     --scientific,
                     containers,
                     transformers,
                     llvm-general,
                     llvm-general-pure
                     -- c-dsl >= 0.3.1

  ghc-options:   -Wall -O2 -fwarn-tabs -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-binds
