Name:           microML
Version:        0.0.5
Synopsis:       Functional Programming for BBC micro:bit
Description:    A simple functional programming language with a repl and a compiler to micro:bit c++ 
Author:         David Kelly
Maintainer:     dkellino@gmail.com

Category:       Compiler

Build-type:     Simple
Cabal-version:  >=1.6

test-suite microMLTest
  hs-source-dirs:    tests
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -threaded
  build-depends:     base,
                     hspec

executable microML
  hs-source-dirs:    src
  Main-is:           Main.hs

  Other-modules:     Compiler.CallGraph,
                     Compiler.CodeGen,
                     Compiler.Failure,
                     Compiler.MicroBitHeader,
                     MicroML.Lexer,
                     MicroML.ListPrimitives,
                     MicroML.Parser,
                     MicroML.Syntax,
                     MicroML.Typing.Env,
                     MicroML.Typing.Infer,
                     MicroML.Typing.Substitutable,
                     MicroML.Typing.Type,
                     MicroML.Typing.TypeError,
                     Repl.Eval,
                     Repl.Help,
                     Repl.HelpEnv,
                     Repl.Pretty,
                     Repl.Repl
  
  -- Packages needed in order to build this package.
  Build-depends:     base, 
                     parsec,
                     repline,
                     cmdargs,
                     filepath,
                     either,
                     process,
                     random,
                     directory,
                     mtl,
                     text,
                     pretty,
                     containers,
                     transformers
                     --setenv,
                     --llvm-general,
                     --llvm-general-pure

  ghc-options:   -Wall -O2 -threaded -fwarn-tabs -fno-warn-name-shadowing -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-binds
